--- a/css/style.css
+++ b/css/style.css
@@ -466,8 +466,7 @@ form input:focus {
     border-bottom: 2px solid #78788c;
 }
 
-form p:before {
-    content: attr(type);
+form label {
     display: block;
     margin: 28px 0 0;
     font-size: 14px;
